# OpenManus

./: .env  .env.example  .gitignore  COMMIT_CONVENTION.md  README.md  commitlint.config.js  next.config.js  package-lock.json  package.json  project-plan.md  tailwind.config.js  tsconfig.json
app/: layout.tsx  page.tsx
app/api/socket/: route.ts
app/components/: browser-view.tsx
components/: browser-view.tsx  chat-panel.tsx  header.tsx  prompt-input.tsx
docs/: ARCHITECTURE.md
hooks/: use-socket.ts  useSocket.ts
lib/: browser-use-service.ts  logger.ts
pages/api/: socket.ts
public/: index.html
python_agent/: README.md  pyproject.toml  requirements.txt  setup.py
python_agent/browser_automation_agent/: __init__.py  agent.py  cli.py  logger.py  models.py  server.py
python_agent/browser_automation_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
server/: browser-service.ts  index.ts
server/utils/scripts/: README.md  debug-browser-use.js
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/hooks/: use-toast.ts  useSocket.ts
src/app/lib/: browser-use-service.ts  logger.ts  socket.ts  utils.ts
src/app/providers/: socket-provider.tsx
src/components/: browser-use-panel.tsx  browser-view.tsx  chat-panel.tsx  footer.tsx  header.tsx  log-panel.tsx  prompt-form.tsx  prompt-input.tsx
src/hooks/: use-socket.ts  use-toast.ts
src/lib/: socket-service.ts  socket.ts  utils.ts
src/server/: browser-service.ts  index.ts  tsconfig.json
src/tests/: validation.test.ts
src/types/: automation.ts
src/utils/: validation.ts
(+12 files in other folders)
